# Manipulating-TGA-Image-Files

./: CMakeLists.txt  README.md  edited.tga  main.c
